--- a/Plantilla MAD/App.config
+++ b/Plantilla MAD/App.config
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Plantilla_MAD.Properties.Settings.ConnectionString"
+            connectionString="Dsn=Conexión_Teradata" providerName="System.Data.Odbc" />
+        <add name="Plantilla_MAD.Properties.Settings.MAD_Conn" connectionString="Dsn=CFRAMIREZ;uid=guest_mad"
+            providerName="System.Data.Odbc" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
