rebranding AC ocultar textos obsoletos remodelo amarre equipos nuevos

--- a/Plantilla MAD/App.config
+++ b/Plantilla MAD/App.config
@@ -7,6 +7,9 @@
             connectionString="Dsn=Conexión_Teradata" providerName="System.Data.Odbc" />
         <add name="Plantilla_MAD.Properties.Settings.MAD_Conn" connectionString="Dsn=CFRAMIREZ;uid=guest_mad"
             providerName="System.Data.Odbc" />
+        <add name="Plantilla_MAD.Properties.Settings.madConnectionString"
+            connectionString="Data Source=den1.mssql4.gear.host;Initial Catalog=mad;Persist Security Info=True;User ID=mad;Password=Th1bQYnh!?E5"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
